@@ -1,7 +1,7 @@
 #!/bin/sh
 # -*- Makefile -*-
 #
-# $Id: config.make.in,v 1.1 2003/11/05 00:37:38 rusfidogate Exp $
+# $Id: config.make.in,v 1.2 2004/10/29 01:11:15 anray Exp $
 #
 # FIDOGATE main configuration
 #
@@ -65,8 +65,11 @@ DEFAULT_V_VARDIR	= @vardir@
 DEFAULT_V_LOCKDIR	= @LOCKDIR@
 DEFAULT_V_SPOOLDIR	= @SPOOLDIR@
 DEFAULT_V_BTBASEDIR	= @btbasedir@
+DEFAULT_V_NETMAILDIR	= @netmaildir@
 DEFAULT_V_INBOUND	= $(DEFAULT_V_BTBASEDIR)/in
 DEFAULT_V_PINBOUND	= $(DEFAULT_V_BTBASEDIR)/pin
+DEFAULT_V_UUINBOUND     = $(DEFAULT_V_BTBASEDIR)/uuin
+DEFAULT_V_FTPINBOUND    = $(DEFAULT_V_BTBASEDIR)/ftpin
 
 DEFAULT_V_ACL		= %C/acl
 DEFAULT_V_ALIASES	= %C/aliases
@@ -194,6 +197,8 @@ LOGDIR		= $(DEFAULT_V_LOGDIR)
 OUTBOUND	= $(DEFAULT_V_BTBASEDIR)
 INBOUND		= $(DEFAULT_V_INBOUND)
 PINBOUND	= $(DEFAULT_V_PINBOUND)
+UUINBOUND	= $(DEFAULT_V_UUINBOUND)
+FTPINBOUND	= $(DEFAULT_V_FTPINBOUND)
 
 NEWSBINDIR	= $(DEFAULT_V_NEWSBINDIR)
 NEWSETCDIR	= $(DEFAULT_F_NEWSETCDIR)
